<resources>
    <string name="app_name">HomePlus Settings</string>
    <string name="app_settings">com.android.tv.settings/.MainSettings</string>
    <string name="settings">Settings</string>
    <string name="settings_save">Save</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_confirm">OK</string>
    <string name="settings_confirm2">CONFIRM</string>
    <string name="settings_submit">Submit</string>
    <string name="settings_submit_cable_only">Submit(C)</string>
    <string name="settings_submit_internet_only">Submit(I)</string>
    <string name="settings_refresh">Refresh</string>
    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>
    <string name="settings_android">Android Settings</string>
    <string name="settings_android_press">Press \u0020</string>
    <string name="settings_android_enter">\u0020 to enter \u0020</string>
    <string name="settings_android_page">\u0020 Page</string>
    <string-array name="settings_personal">
        <item>System Upgrade</item>
        <item>@string/parental_control</item>
        <item>Purchase PIN</item>
        <item>Language Setting</item>
        <item>Video and Audio Setting</item>
        <item>Subtitle Setting</item>
        <item>Mini guide duration time</item>
        <item>Channel Scan</item>
        <item>@string/system_information</item>
        <item>STB Data Return Setting</item>
        <item>Remote Control Setting</item>
        <item>Tutorial Setting</item>
    </string-array>
    <string name="parental_control">Parental Control</string>
    <string name="system_information">System Information</string>
    <string name="unit_of_display_time">s</string>
    <string name="open">Enable</string>
    <string name="close">Close</string>
    <string name="tv_channel">TV Channel</string>
    <string name="setting_list">Setting List</string>
    <string-array name="settings_personal_subtitle">
        <item>Upgrade your system to the latest version</item>
        <item>Set the parental lock settings, and can get the default PIN from call center</item>
        <item>Change the purchase PIN</item>
        <item>Set the language displayed on the screen</item>
        <item>Set 5 default options related to video and audio</item>
        <item>Set preferred subtitle language</item>
        <item>Set the auto-fade time of the mini guide</item>
        <item>Scan the channel to obtain the up-to-date channel list</item>
        <item>Check basic information about the system</item>
        <item>Set personal data (VDC/VBM data) return mechanism</item>
        <item>Set the remote control to control TV Set</item>
        <item>Set-top box function guide tutorial, users can set the display to be on or off</item>
    </string-array>
    <string-array name="settings_system">
        <item>System Upgrade</item>
        <item>Channel Scan</item>
        <item>Signal Diagnose</item>
        <item>Network Settings</item>
        <item>CA Settings</item>
        <item>Factory Reset</item>
        <item>SMS Installation Report</item>
        <item>Mobile Activation QR</item>
        <item>Debug Configuration</item>
        <item>Format Disk</item>
    </string-array>
    <string name="settings_system_pin">Enter your 8 digits engineer PIN</string>
    <string name="settings_system_pindel">Press left to delete</string>
    <string name="settings_system_pinwrong">Wrong PIN Code, Try again</string>
    <string-array name="settings_system_subtitle">
        <item>Upgrade your system to the latest version</item>
        <item>Scan the channel to obtain the up-to-date channel list</item>
        <item>Detect the signal information through the tuner lock frequency of the set-top box</item>
        <item>Set the network configuration</item>
        <item>Set up your set-top box to display CA related information</item>
        <item>Reset the factory setting</item>
        <item>Set-top box must be registered by requested system via IVR</item>
        <item>Create QR code to enable mobile activation</item>
        <item>Check CPU and Memory usage status</item>
        <item>Hard disk connection is required for disk formatting</item>
    </string-array>
    <string name="settings_update_info">Upgrade Information</string>
    <string name="settings_update_sysversion">Software Version</string>
    <string name="settings_update_updateversion">Upgrade Version</string>
    <string name="settings_update_upgrade">Upgrade</string>
    <string name="settings_update_newest_version">Latest version already installed</string>
    <string name="upgrade_status_upgrade">Upgrade</string>
    <string name="upgrade_status_confirm">OK</string>
    <string name="upgrade_status_cancel">Cancel</string>
    <string name="upgrade_status_checking">Checking...</string>
    <string name="upgrade_status_current_version">Current version : </string>
    <string name="upgrade_status_is_upgrade">Do you want to update to new version now?</string>
    <string name="upgrade_status_new_version_for_upgrade">New version is now available</string>
    <string name="upgrade_status_new_version">New version : </string>
    <string name="upgrade_status_downloading">downloading...</string>
    <string name="upgrade_status_upgrade_immediately">The new software version is released. Do you need to upgrade now?</string>
    <string name="upgrade_status_upgrade_confirm">Upgrade</string>
    <string name="upgrade_status_download_finish">System detects an update, the download is complete</string>
    <string name="upgrade_status_reboot">System will reboot after the update</string>
    <string name="upgrade_status_second">%d seconds</string>
    <string name="upgrade_status_newest_version">Latest version already installed</string>
    <string name="upgrade_status_no_free_space">No free disk space</string>
    <string name="upgrade_status_download_failed">Download failed</string>
    <string name="settings_parental_control_pg18">PG18</string>
    <string name="settings_parental_control_pg15">PG15</string>
    <string name="settings_parental_control_pg12">PG12</string>
    <string name="settings_parental_control_pg6">PG6</string>
    <string name="settings_parental_control_pin">Enter 4 digits parental PIN</string>
    <string name="settings_purchase_pin">Enter 4 digits purchase PIN</string>
    <string name="settings_purchase_pin_title">Purchase PIN</string>
    <string name="settings_purchase_pin_sub">Enter 4 digits purchase PIN</string>
    <string name="settings_parental_rating">Parental Rating</string>
    <string name="settings_parental_rating_sub">Set age level to limit watching</string>
    <string name="settings_parental_channel">Parental Channel</string>
    <string name="settings_parental_channel_sub">Set channels to limit watching</string>
    <string name="settings_parental_channel_selectch">Selected Ch.</string>
    <string name="settings_parental_channel_selectall">Select All</string>
    <string name="settings_parental_channel_delselectall">Deselect All</string>
    <string name="settings_parental_worktime">Time Setting</string>
    <string name="settings_parental_worktime_sub">Set the working time limit for the set-top box</string>
    <string name="settings_parental_worktime_item1">Time Setting</string>
    <string name="settings_parental_worktime_item2">Start Time</string>
    <string name="settings_parental_worktime_item3">End Time</string>
    <string name="settings_parental_changepin">Change PIN</string>
    <string name="settings_parental_changepin_title">Change PIN</string>
    <string name="settings_parental_changepin_sub">Enter 4 digit parental PIN to change</string>
    <string name="settings_parental_changepin_item1">New PIN</string>
    <string name="settings_parental_changepin_item2">Confirm PIN</string>
    <string name="settings_parental_adult_show">Adult PIN</string>
    <string name="settings_parental_adult_show_sub">You can set adult lock settings</string>
    <string name="settings_lang_setting_chinese">Chinese (繁體中文)</string>
    <string name="settings_lang_setting_english">English</string>
    <string name="settings_av_setting_auto">Auto</string>
    <string name="settings_av_setting_aspect">Aspect Ratio</string>
    <string name="settings_av_setting_resoultuion">Resolution</string>
    <string name="settings_av_setting_audiolang">Audio Lang.</string>
    <string name="settings_av_setting_btn">Video and Audio Setting</string>
    <string name="settings_av_setting_cecon">Enable</string>
    <string name="settings_av_setting_cecoff">Disable</string>
    <string name="settings_av_setting_lang_chinese">Chinese</string>
    <string name="settings_av_setting_lang_english">English</string>
    <string name="video_aduio_title">Video and Audio Setting</string>
    <string name="video_aduio_subtitle">Set your preferred video and audio preferences</string>
    <string name="video_aduio_aspectratio">Aspect Ratio</string>
    <string name="video_aduio_resolution">Resolution</string>
    <string name="video_aduio_audiolang">Audio Lang.</string>
    <string name="video_aduio_hdmicec">HDMI CEC</string>
    <string name="video_aduio_hdcp">HDCP</string>
    <string name="video_audio_cecon">Enable</string>
    <string name="video_audio_cecoff">Disable</string>
    <string name="aspect_ratio_16_9_pb">16:9 PB</string>
    <string name="aspect_ratio_16_9_ps">16:9 PS</string>
    <string name="aspect_ratio_4_3_lb">4:3 LB</string>
    <string name="aspect_ratio_4_3_pb">4:3 PS</string>
    <string name="resolution_comfirm_title">Resolution Confirm</string>
    <string name="resolution_comfirm_message_1">The resoultion is set</string>
    <string name="resolution_comfirm_message_2">In %d seconds, the resolution will be revertd\nPlease confirm the resolution is correct and press Confirm</string>
    <string-array name="audio_language_list">
        <item>@string/settings_av_setting_lang_chinese</item>
        <item>@string/settings_av_setting_lang_english</item>
    </string-array>
    <string-array name="subtitle_language_list">
        <item>@string/settings_av_setting_lang_chinese</item>
        <item>@string/settings_av_setting_lang_english</item>
    </string-array>
    <string-array name="aspect_ratio_list">
        <item>@string/settings_av_setting_auto</item>
        <item>@string/aspect_ratio_16_9_pb</item>
        <item>@string/aspect_ratio_16_9_ps</item>
        <item>@string/aspect_ratio_4_3_lb</item>
        <item>@string/aspect_ratio_4_3_pb</item>
    </string-array>
    <string name="settings_subtitle_info1">Press the</string>
    <string name="settings_subtitle_info2">Subtitle setting</string>
    <string name="settings_subtitle_info3">Button</string>
    <string name="settings_subtitle_description">Change the setting value of subtitle</string>
    <string name="settings_subtitle_title">Subtitle Setting</string>
    <string name="settings_subtitle_subtitle">Set preferred subtitle language</string>
    <string name="settings_subtitle_text">Subtitle</string>
    <string name="settings_system_info_stbsn">Serial Number</string>
    <string name="settings_reset_press">Press the</string>
    <string name="settings_reset_button">button</string>
    <string name="settings_reset_resetstb">Factory Reset</string>
    <string name="settings_reset_description">Restore the set-top box to the factory default setting</string>
    <string name="settings_rcu_press">Press the</string>
    <string name="settings_rcu_setting">remote control setting</string>
    <string name="settings_rcu_button">button</string>
    <string name="settings_rcu_setting_description">It allows the remote control\nto control the TV\n(Note: the remote control needs\nto be paired with Bluetooth first)</string>
    <string name="settings_rcu_upgrade_btn">Check/Update</string>
    <string name="settings_rcu_setting_btn">Settings</string>
    <string name="settings_rcu_volume_lock_btn">Volume Control</string>
</resources>