<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parental_locked_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_rcu_press"
                    android:textColor="@color/colorWhiteOpacity80"
                    android:textSize="16dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/settings_rcu_setting"
                    android:textColor="@color/colorGoldOpacity70"
                    android:textSize="16dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_rcu_button"
                    android:textColor="@color/colorWhiteOpacity80"
                    android:textSize="16dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settings_rcu_setting_description"
                android:textColor="@color/colorWhiteOpacity40"
                android:textSize="15dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRemoteControlUpgrade"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="145dp"
            android:paddingStart="21.5dp"
            android:paddingEnd="21.5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button_item2"
            android:text="@string/settings_rcu_upgrade_btn"
            android:textColor="@color/state_selected_white_normal_white70"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnRemoteControl"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRemoteControl"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="145dp"
            android:paddingStart="21.5dp"
            android:paddingEnd="21.5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button_item2"
            android:text="@string/settings_rcu_setting_btn"
            android:textColor="@color/state_selected_white_normal_white70"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnRemoteControlVolumeLock"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRemoteControlVolumeLock"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="145dp"
            android:paddingStart="21.5dp"
            android:paddingEnd="21.5dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button_item2"
            android:text="@string/settings_rcu_volume_lock_btn"
            android:textColor="@color/state_selected_white_normal_white70"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>