<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/settings_android"
            android:textColor="#ffffff"
            android:textSize="19dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="60dp"
            android:background="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="260dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_android_press"
                android:textSize="16dp"
                android:textColor="@color/colorWhiteOpacity50" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ok" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_android_enter"
                android:textSize="16dp"
                android:textColor="@color/colorWhiteOpacity50" />

            <TextView
                android:id="@+id/tvSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_android"
                android:textSize="16dp"
                android:textColor="@color/colorNewGoldOpacity70" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_android_page"
                android:textSize="16dp"
                android:textColor="@color/colorWhiteOpacity50" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>