<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parental_locked_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_av_setting_aspect"
                android:textColor="@color/colorWhiteOpacity80"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvAspectRatio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/settings_av_setting_auto"
                android:textColor="@color/colorGoldOpacity80"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_av_setting_resoultuion"
                android:textColor="@color/colorWhiteOpacity80"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvHDMIResolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text=""
                android:textColor="@color/colorGoldOpacity80"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearLayout1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_av_setting_audiolang"
                android:textColor="@color/colorWhiteOpacity80"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/settings_av_setting_lang_chinese"
                android:textColor="@color/colorGoldOpacity80"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="HDMI CEC"
                android:textColor="@color/colorWhiteOpacity80"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvHDMICEC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/settings_av_setting_cecon"
                android:textColor="@color/colorGoldOpacity80"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/linearLayout1"
            app:layout_constraintTop_toTopOf="@+id/linearLayout1">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="HDMI HDCP"
                android:textColor="@color/colorWhiteOpacity80"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvHDMIHDCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text=""
                android:textColor="@color/colorGoldOpacity80"
                android:textSize="15dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnVideoAudio"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="165dp"
            android:paddingStart="21.5dp"
            android:paddingEnd="21.5dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button_item2"
            android:text="@string/settings_av_setting_btn"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>